--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Batatabit</title>
-    <link rel="stylesheet" href="/batatabit/css/index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
